# workbase

./: .gitignore  CLAUDE.md  EULA.md  LICENSE  PRIVACY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.omc/state/: hud-stdin-cache.json
.omc/state/sessions/8b890583-9369-442e-84bf-5df5bf1ff380/: hud-state.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  key.priv.pub  tauri.conf.json
src-tauri/.omc/state/: hud-stdin-cache.json
src-tauri/.omc/state/sessions/8b890583-9369-442e-84bf-5df5bf1ff380/: hud-state.json
src-tauri/capabilities/: default.json
src-tauri/icons/.omc/state/: hud-stdin-cache.json
src-tauri/icons/.omc/state/sessions/8b890583-9369-442e-84bf-5df5bf1ff380/: hud-state.json
src-tauri/src/: crash.rs  db.rs  files.rs  git.rs  lib.rs  main.rs  pty_manager.rs  terminal_engine.rs  watcher.rs
src/.omc/state/: hud-stdin-cache.json
src/.omc/state/sessions/8b890583-9369-442e-84bf-5df5bf1ff380/: hud-state.json
src/lib/: CommandPalette.svelte  ErrorBoundary.svelte  FilePanel.svelte  FileTree.svelte  FileTreeNode.svelte  QuickCommandPanel.svelte  Settings.svelte  Sidebar.svelte  TabBar.svelte  TerminalSearch.svelte  i18n.svelte.ts  i18n.test.ts  keybindings.svelte.ts  keybindings.test.ts  pty.ts  stores.svelte.ts  theme.svelte.ts  types.ts
