[package]
name = "workbase"
version = "0.1.0"
description = "A lightweight, project-centric terminal workspace"
authors = ["ZhangLiHua"]
edition = "2021"

[lib]
name = "workbase_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
which = "6"
walkdir = "2"
ignore = "0.4"
notify = { version = "6", features = ["macos_fsevent"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2"
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 4
panic = "abort"
